--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:summary="Summary of Kerome Preferences" android:title="Kerome Preferences">
-        <EditTextPreference android:title="Mail Address" android:summary="Send to mail address..." android:key="to_addr"></EditTextPreference>
-    </PreferenceCategory>
+    <EditTextPreference android:title="@string/recipient" android:key="recipient" android:summary="@string/recipient_summary"></EditTextPreference>
 </PreferenceScreen>
