--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
 <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
-    <TextView android:text="@string/recipient" android:layout_height="wrap_content" android:id="@+id/recipient_label" android:layout_width="wrap_content" android:layout_gravity="center_vertical"></TextView>
-    <TextView android:text="foo@bar.com" android:layout_height="wrap_content" android:id="@+id/recipient_edit" android:layout_width="wrap_content" android:layout_gravity="center_vertical"></TextView>
+    <TextView android:text="@string/recipient" android:layout_height="wrap_content" android:id="@+id/recipient_label" android:layout_width="wrap_content" android:layout_gravity="center_vertical" android:padding="5dp"></TextView>
+    <TextView android:text="foo@bar.com" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_vertical" android:padding="5dp" android:id="@+id/recipient_text"></TextView>
 </LinearLayout>
 <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">
-    <TextView android:text="@string/expected_time" android:layout_height="wrap_content" android:id="@+id/expected_time_label" android:layout_width="wrap_content" android:layout_gravity="center_vertical"></TextView>
-    <SeekBar android:layout_gravity="center_vertical" android:layout_margin="5dp" android:id="@+id/expected_time_bar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"></SeekBar>
-    <EditText android:inputType="time" android:id="@+id/expected_time_edit" android:width="70dp" android:layout_width="wrap_content" android:lines="1" android:layout_height="wrap_content" android:text="99:99" android:layout_gravity="center_vertical|right"></EditText>
+    <TextView android:text="@string/expected_time" android:layout_height="wrap_content" android:id="@+id/expected_time_label" android:layout_width="wrap_content" android:layout_gravity="center_vertical" android:padding="5dp"></TextView>
+    <SeekBar android:layout_gravity="center_vertical" android:layout_margin="5dp" android:id="@+id/expected_time_bar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:max="480"></SeekBar>
+    <TextView android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:id="@+id/expected_time_text" android:text="99:99"></TextView>
 </LinearLayout>
-<TimePicker android:id="@+id/timePicker1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
 <Button android:text="@string/send" android:layout_width="match_parent" android:layout_height="wrap_content" android:onClick="sendMail" android:id="@+id/send_button"></Button>
 </LinearLayout>
