--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <EditTextPreference android:title="@string/recipient" android:key="recipient" android:summary="@string/recipient_summary"></EditTextPreference>
+    <EditTextPreference android:title="@string/recipient" android:summary="@string/recipient_summary" android:key="@string/prefs_recipient"></EditTextPreference>
+    <ListPreference android:title="@string/intent_action" android:key="@string/prefs_intent_action" android:entries="@array/intent_action_entries" android:entryValues="@array/intent_action_entry_values"></ListPreference>
 </PreferenceScreen>
