--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -8,4 +8,22 @@
         <item>action_send</item>
         <item>action_sendto</item>
     </string-array>
+    <string-array name="usual_quitting_time_entries">
+        <item>@string/quitting_time_18</item>
+        <item>@string/quitting_time_19</item>
+        <item>@string/quitting_time_20</item>
+        <item>@string/quitting_time_21</item>
+        <item>@string/quitting_time_22</item>
+        <item>@string/quitting_time_23</item>
+        <item>@string/quitting_time_24</item>
+    </string-array>
+    <string-array name="usual_quitting_time_entry_values">
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+    </string-array>
 </resources>
