--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources><string name="prefs_recipient">prefs_recipient</string>
 <string name="prefs_intent_action">prefs_intent_action</string>
+<string name="prefs_usual_quitting_time">prefs_usual_quitting_time</string>
 </resources>
