--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -2,5 +2,5 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:icon="@android:drawable/ic_menu_preferences" android:title="@string/preference" android:id="@+id/prefs"></item>
-    <item android:title="@string/help" android:icon="@android:drawable/ic_menu_help" android:id="@+id/help"></item>
+    <item android:title="@string/about" android:id="@+id/about" android:icon="@android:drawable/ic_menu_info_details"></item>
 </menu>
